Adição da GET listas

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas</title>
 </head>
-<body>
+<body >
+    <main id="main">
 
-    <h1 id="mensagem">Opa!</h1>
-    
+        <nav>
+
+        </nav>
+
+    <!-- <h1 id="mensagem">Opa!</h1> -->
 
 
+
+
+    </main>
     <script src="js/home.js"></script>
 </body>
 </html>
