Refatoração dos controllers

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,23 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tarefas</title>
 </head>
-<body >
+
+<body>
     <main id="main">
 
-        <nav>
 
-        </nav>
+        <header>
+            <nav>
+                <ul>
+                    <!-- <li><a href="/">Home</a></li>
+                    <li><a href="/tarefas">Tarefas</a></li>
+                    <li><a href="/sobre">Sobre</a></li> -->
+                </ul>
+            </nav>
+        </header>
 
-    <!-- <h1 id="mensagem">Opa!</h1> -->
+        <div id="listas">
+            <h1>Listas</h1>
+
+        </div>
 
 
+        <!-- <h1 id="mensagem">Opa!</h1> -->
 
+        <input id="input-Lista" placeholder="Criar lista">
+        <button id="btn-adicionarLista">Adicionar</button>
 
     </main>
     <script src="js/home.js"></script>
 </body>
+
 </html>
